--- a/less/index.less
+++ b/less/index.less
@@ -46,6 +46,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+	margin: 10px;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -53,7 +54,40 @@ table {
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+// Mixins //
+
+.container {
+	max-width: 1000px;
+	margin: auto;
+
+	header {
+		width: 100%;
+		height: 100px;
+		margin-top: 30px;
+		display: flex;
+
+		nav {
+			text-align: center;
+			background-color: gray;
+			border-radius: 8px;
+			width: 50%;
+			height: 80%;
+			margin: auto;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+
+			a {
+				text-decoration: none;
+				color: white;
+				padding: 10px;
+				transition: transform 0.5s;
+				font-size: 1.1em;
+			}
+			a:hover {
+				transform: scale(1.3);
+			}
+		}
+	}
 }
 
