--- a/css/index.css
+++ b/css/index.css
@@ -129,18 +129,19 @@ table {
   margin: 10px;
 }
 h1 {
-  font-size: 2.75rem;
+  font-size: 2.5rem;
 }
 h2 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
 }
 .box-properties {
+  border: 1px solid white;
   border-radius: 8px;
-  background-color: lightgray;
+  background-color: #E8E8E8;
 }
 .container {
   max-width: 1000px;
@@ -153,8 +154,9 @@ h2 {
   display: flex;
 }
 .container header nav {
+  border: 1px solid white;
   border-radius: 8px;
-  background-color: lightgray;
+  background-color: #E8E8E8;
   text-align: center;
   width: 50%;
   height: 80%;
@@ -165,22 +167,24 @@ h2 {
 }
 .container header nav a {
   text-decoration: none;
+  background-color: #F8F8F8;
   color: black;
+  border-radius: 8px;
   padding: 10px;
-  transition: transform 0.5s;
+  transition: transform 0.3s;
   font-size: 1.2rem;
 }
 .container header nav a:hover {
   transform: scale(1.3);
 }
 .container .top-content {
+  border: 1px solid white;
   border-radius: 8px;
-  background-color: lightgray;
+  background-color: #E8E8E8;
   width: 100%;
   height: 500px;
   display: flex;
   justify-content: space-evenly;
-  background-color: lightgrey;
 }
 .container .top-content .left-content {
   display: flex;
@@ -188,19 +192,39 @@ h2 {
   width: 33%;
   align-items: center;
   margin: auto;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 .container .top-content .left-content h1 {
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 .container .top-content .left-content h2 {
   width: 75%;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border-top: 1px solid grey;
 }
 .container .top-content img {
   width: 33%;
+  height: 80%;
+  margin: auto;
+  border-radius: 12px;
+  border: 0.2em solid #F8F8F8;
 }
 .container .top-content .right-content {
+  font-style: italic;
   width: 33%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  padding: 2%;
+}
+.container .top-content .right-content p {
+  font-size: 1.3em;
 }
