--- a/less/index.less
+++ b/less/index.less
@@ -51,10 +51,10 @@ table {
 }
 
 h1 {
-	font-size: 2.75rem;
+	font-size: 2.5rem;
 }
 h2 {
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -64,8 +64,9 @@ h2 {
 
 // Mixins //
 .box-properties {
+	border: 1px solid white;
 	border-radius: 8px;
-	background-color: lightgray;
+	background-color: #E8E8E8
 }
 
 .container {
@@ -91,9 +92,11 @@ h2 {
 
 			a {
 				text-decoration: none;
+				background-color: #F8F8F8;
 				color: black;
+				border-radius: 8px;
 				padding: 10px;
-				transition: transform 0.5s;
+				transition: transform 0.3s;
 				font-size: 1.2rem;
 			}
 			a:hover {
@@ -109,7 +112,6 @@ h2 {
 		height: 500px;
 		display: flex;
 		justify-content: space-evenly;
-		background-color: lightgrey;
 
 		.left-content {
 			display: flex;
@@ -117,24 +119,45 @@ h2 {
 			width: 33%;
 			align-items: center;
 			margin: auto;
+			margin-left: 1.5%;
+			margin-right: 1.5%;
+			background-color: #F8F8F8;
+			border-radius: 8px;
+			padding-top: 1%;
+			padding-bottom: 1%;
 
 			h1 {
-				padding-bottom: 10px;
+				padding-bottom: 15px;
 			}
 			h2 {
 				width: 75%;
 				text-align: center;
-				padding-top: 10px;
+				padding-top: 15px;
+				padding-bottom: 15px;
 				border-top: 1px solid grey;
 			}
 		}
 
 		img {
 			width: 33%;
+			height: 80%;
+			margin: auto;
+			border-radius: 12px;
+			border: .2em solid #F8F8F8;
 		}
 
 		.right-content {
+			font-style: italic;
 			width: 33%;
+			display: flex;
+			align-items: center;
+			text-align: center;
+			margin: auto;
+			padding: 2%;
+
+			p{
+				font-size: 1.3em;
+			}
 		}
 	}
 }
