--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,14 @@ h2 {
   border-radius: 8px;
   background-color: #E8E8E8;
 }
+.bottom-content-box-properties {
+  width: 49.5%;
+  margin-top: 1%;
+}
+.tech-images {
+  width: 50%;
+  height: auto;
+}
 .container {
   max-width: 1000px;
   margin: auto;
@@ -182,7 +190,9 @@ h2 {
   border-radius: 8px;
   background-color: #E8E8E8;
   width: 100%;
-  height: 500px;
+  height: auto;
+  padding-top: 7%;
+  padding-bottom: 7%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -227,4 +237,47 @@ h2 {
 }
 .container .top-content .right-content p {
   font-size: 1.3em;
+}
+.container .bottom-content {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.container .bottom-content .technologies {
+  width: 49.5%;
+  margin-top: 1%;
+  border: 1px solid white;
+  border-radius: 8px;
+  background-color: #E8E8E8;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .bottom-content .technologies h2 {
+  width: 50%;
+  margin: 3%;
+  font-size: 2em;
+  border-bottom: 2px solid grey;
+  padding-bottom: 3%;
+}
+.container .bottom-content .technologies .tech-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
+}
+.container .bottom-content .technologies .tech-images img {
+  width: 30%;
+  height: 30%;
+  margin: 4%;
+}
+.container .bottom-content .education {
+  width: 49.5%;
+  margin-top: 1%;
+  border: 1px solid white;
+  border-radius: 8px;
+  background-color: #E8E8E8;
+  text-align: center;
 }
