--- a/less/index.less
+++ b/less/index.less
@@ -69,6 +69,16 @@ h2 {
 	background-color: #E8E8E8
 }
 
+.bottom-content-box-properties {
+	width: 49.5%;
+	margin-top: 1%;
+}
+
+.tech-images {
+	width: 50%;
+	height: auto;
+}
+
 .container {
 	max-width: 1000px;
 	margin: auto;
@@ -109,7 +119,9 @@ h2 {
 	.top-content {
 		.box-properties();
 		width: 100%;
-		height: 500px;
+		height: auto;
+		padding-top: 7%;
+		padding-bottom: 7%;
 		display: flex;
 		justify-content: space-evenly;
 
@@ -158,6 +170,48 @@ h2 {
 			p{
 				font-size: 1.3em;
 			}
+		}
+	}
+
+	.bottom-content {
+		width: 100%;
+		height: auto;
+		display: flex;
+		justify-content: space-between;
+
+		.technologies {
+			.bottom-content-box-properties();
+			.box-properties();
+			text-align: center;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+
+			h2 {
+				width: 50%;
+				margin: 3%;
+				font-size: 2em;
+				border-bottom: 2px solid grey;
+				padding-bottom: 3%;
+			}
+
+			.tech-images {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				width: 90%;
+
+				img {
+					width: 30%;
+					height: 30%;
+					margin: 4%;
+				}
+			}
+		}
+		.education {
+			.bottom-content-box-properties();
+			.box-properties();
+			text-align: center;
 		}
 	}
 }
