--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,9 @@ h1 {
 h2 {
   font-size: 1.5rem;
 }
+h3 {
+  font-size: 1.25rem;
+}
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
@@ -143,13 +146,20 @@ h2 {
   border-radius: 8px;
   background-color: #E8E8E8;
 }
-.bottom-content-box-properties {
+.middle-content-box-properties {
   width: 49.5%;
   margin-top: 1%;
 }
 .tech-images {
   width: 50%;
   height: auto;
+}
+.middleContentHeader {
+  width: 50%;
+  margin: 3%;
+  font-size: 2em;
+  border-bottom: 2px solid grey;
+  padding-bottom: 3%;
 }
 .container {
   max-width: 1000px;
@@ -238,13 +248,13 @@ h2 {
 .container .top-content .right-content p {
   font-size: 1.3em;
 }
-.container .bottom-content {
+.container .middle-content {
   width: 100%;
   height: auto;
   display: flex;
   justify-content: space-between;
 }
-.container .bottom-content .technologies {
+.container .middle-content .technologies {
   width: 49.5%;
   margin-top: 1%;
   border: 1px solid white;
@@ -255,29 +265,132 @@ h2 {
   flex-direction: column;
   align-items: center;
 }
-.container .bottom-content .technologies h2 {
+.container .middle-content .technologies h2 {
   width: 50%;
   margin: 3%;
   font-size: 2em;
   border-bottom: 2px solid grey;
   padding-bottom: 3%;
 }
-.container .bottom-content .technologies .tech-images {
+.container .middle-content .technologies .tech-images {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: 90%;
+  padding: 5%;
 }
-.container .bottom-content .technologies .tech-images img {
+.container .middle-content .technologies .tech-images img {
   width: 30%;
   height: 30%;
   margin: 4%;
 }
-.container .bottom-content .education {
+.container .middle-content .education {
   width: 49.5%;
   margin-top: 1%;
   border: 1px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .middle-content .education h2 {
+  width: 50%;
+  margin: 3%;
+  font-size: 2em;
+  border-bottom: 2px solid grey;
+  padding-bottom: 3%;
+}
+.container .middle-content .education .schools {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 80%;
+  justify-content: center;
+  justify-content: space-evenly;
+}
+.container .middle-content .education .schools #lambda-school {
+  width: 47%;
+  height: 46%;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+}
+.container .middle-content .education .schools #rcbc {
+  width: 47%;
+  height: 46%;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+}
+.container .middle-content .education .schools #certs {
+  width: 96%;
+  height: 46%;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+}
+.container .middle-content .education .schools div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .middle-content .education .schools div h3 {
+  margin: 5px;
+  width: 90%;
+  height: 40%;
+  padding: 4%;
+  border-bottom: 1px solid grey;
+}
+.container .middle-content .education .schools div p {
+  margin-top: 15%;
+}
+.container .work-history {
+  border: 1px solid white;
+  border-radius: 8px;
+  background-color: #E8E8E8;
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .work-history h2 {
+  text-align: center;
+  width: 40%;
+  font-size: 2em;
+  border-bottom: 2px solid grey;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  padding-bottom: 1%;
+}
+.container .work-history .work-container {
+  width: 96%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+}
+.container .work-history .work-container div {
+  width: 32%;
+  height: auto;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5%;
+}
+.container .work-history .work-container div h3 {
+  text-align: center;
+  margin: 5px;
+  width: 90%;
+  height: 40%;
+  padding: 4%;
+  border-bottom: 1px solid grey;
+}
+.container .work-history .work-container div p {
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
