--- a/less/index.less
+++ b/less/index.less
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 62.5%;
 	font: inherit;
+	font-family: 'Open Sans', sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -51,13 +52,16 @@ table {
 }
 
 h1 {
-	font-size: 2.5rem;
+	font-size: 2.2rem;
 }
 h2 {
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 }
 h3{
-	font-size: 1.25rem;
+	font-size: 1.15rem;
+}
+p {
+	font-size: .9rem;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -296,7 +300,7 @@ h3{
 
 		.work-container {
 			width: 96%;
-			height: auto;
+			height: 90%;
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
@@ -305,7 +309,7 @@ h3{
 
 			div {
 				width: 32%;
-				height: auto;
+				height: 100%;
 				background-color: #F8F8F8;
 				border-radius: 8px;
 				display: flex;
@@ -317,7 +321,7 @@ h3{
 					text-align: center;
 					margin: 5px;
 					width: 90%;
-					height: 40%;
+					height: 30%;
 					padding: 4%;
 					border-bottom: 1px solid grey;
 				}
@@ -327,6 +331,14 @@ h3{
 				}
 			}
 		}
+	}
+
+	footer {
+		.box-properties();
+		margin-top: 10px;
+		margin-bottom: 10%;
+		width: 100%;
+		height: 100px;
 	}
 }
 
