--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,11 @@ body {
   background-color: #F8F8F8;
   line-height: 1;
 }
+@media (max-width: 500px) {
+  body {
+    background-color: none;
+  }
+}
 ol,
 ul {
   list-style: none;
@@ -132,14 +137,29 @@ table {
 h1 {
   font-size: 2.2rem;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 1.4rem;
+  }
+}
 h2 {
   font-size: 1.2rem;
 }
 h3 {
   font-size: 1.15rem;
 }
+@media (max-width: 500px) {
+  h3 {
+    font-size: 0.9rem;
+  }
+}
 p {
   font-size: 0.9rem;
+}
+@media (max-width: 500px) {
+  p {
+    font-size: 0.7rem;
+  }
 }
 /* Set every element's box-sizing to border-box */
 * {
@@ -165,6 +185,11 @@ p {
   border-bottom: 2px solid grey;
   padding-bottom: 3%;
 }
+.education-boxes-phone {
+  width: 100%;
+  height: 200px;
+  margin-top: 2%;
+}
 .container {
   max-width: 1000px;
   margin: auto;
@@ -174,6 +199,11 @@ p {
   height: 100px;
   margin-top: 30px;
   display: flex;
+}
+@media (max-width: 500px) {
+  .container header {
+    height: auto;
+  }
 }
 .container header nav {
   border: 1px solid white;
@@ -187,6 +217,14 @@ p {
   align-items: center;
   justify-content: space-evenly;
 }
+@media (max-width: 500px) {
+  .container header nav {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    border-radius: 0px;
+  }
+}
 .container header nav a {
   text-decoration: none;
   background-color: #F8F8F8;
@@ -195,6 +233,13 @@ p {
   padding: 10px;
   transition: transform 0.3s;
   font-size: 1.2rem;
+}
+@media (max-width: 500px) {
+  .container header nav a {
+    width: 100%;
+    border-bottom: 1px solid black;
+    border-radius: 0px;
+  }
 }
 .container header nav a:hover {
   transform: scale(1.3);
@@ -210,6 +255,12 @@ p {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width: 500px) {
+  .container .top-content {
+    flex-direction: column;
+    margin-top: 2%;
+  }
+}
 .container .top-content .left-content {
   display: flex;
   flex-direction: column;
@@ -222,6 +273,14 @@ p {
   border-radius: 8px;
   padding-top: 1%;
   padding-bottom: 1%;
+}
+@media (max-width: 500px) {
+  .container .top-content .left-content {
+    width: 100%;
+    margin: 0;
+    border-radius: 0px;
+    background-color: #E8E8E8;
+  }
 }
 .container .top-content .left-content h1 {
   padding-bottom: 15px;
@@ -240,6 +299,13 @@ p {
   border-radius: 12px;
   border: 0.2em solid #F8F8F8;
 }
+@media (max-width: 500px) {
+  .container .top-content img {
+    width: 50%;
+    height: auto;
+    margin-top: 3%;
+  }
+}
 .container .top-content .right-content {
   font-style: italic;
   width: 33%;
@@ -249,6 +315,11 @@ p {
   margin: auto;
   padding: 2%;
 }
+@media (max-width: 500px) {
+  .container .top-content .right-content {
+    width: 80%;
+  }
+}
 .container .top-content .right-content p {
   font-size: 1.3em;
 }
@@ -257,6 +328,11 @@ p {
   height: auto;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .container .middle-content {
+    flex-direction: column;
+  }
 }
 .container .middle-content .technologies {
   width: 49.5%;
@@ -268,6 +344,11 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (max-width: 500px) {
+  .container .middle-content .technologies {
+    width: 100%;
+  }
 }
 .container .middle-content .technologies h2 {
   width: 50%;
@@ -299,6 +380,13 @@ p {
   flex-direction: column;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .container .middle-content .education {
+    width: 100%;
+    height: auto;
+    padding: 2%;
+  }
+}
 .container .middle-content .education h2 {
   width: 50%;
   margin: 3%;
@@ -314,11 +402,23 @@ p {
   justify-content: center;
   justify-content: space-evenly;
 }
+@media (max-width: 500px) {
+  .container .middle-content .education .schools {
+    flex-direction: column;
+  }
+}
 .container .middle-content .education .schools #lambda-school {
   width: 47%;
   height: 46%;
   background-color: #F8F8F8;
   border-radius: 8px;
+}
+@media (max-width: 500px) {
+  .container .middle-content .education .schools #lambda-school {
+    width: 100%;
+    height: 200px;
+    margin-top: 2%;
+  }
 }
 .container .middle-content .education .schools #rcbc {
   width: 47%;
@@ -326,11 +426,25 @@ p {
   background-color: #F8F8F8;
   border-radius: 8px;
 }
+@media (max-width: 500px) {
+  .container .middle-content .education .schools #rcbc {
+    width: 100%;
+    height: 200px;
+    margin-top: 2%;
+  }
+}
 .container .middle-content .education .schools #certs {
   width: 96%;
   height: 46%;
   background-color: #F8F8F8;
   border-radius: 8px;
+}
+@media (max-width: 500px) {
+  .container .middle-content .education .schools #certs {
+    width: 100%;
+    height: 200px;
+    margin-top: 2%;
+  }
 }
 .container .middle-content .education .schools div {
   display: flex;
@@ -376,6 +490,12 @@ p {
   margin-top: 1.5%;
   margin-bottom: 1.5%;
 }
+@media (max-width: 500px) {
+  .container .work-history .work-container {
+    flex-direction: column;
+    height: auto;
+  }
+}
 .container .work-history .work-container div {
   width: 32%;
   height: 100%;
@@ -386,17 +506,24 @@ p {
   align-items: center;
   padding: 1.5%;
 }
+@media (max-width: 500px) {
+  .container .work-history .work-container div {
+    height: 150px;
+    width: 99%;
+    margin: 1%;
+  }
+}
 .container .work-history .work-container div h3 {
   text-align: center;
   margin: 5px;
   width: 90%;
   height: 30%;
   padding: 4%;
+  padding-top: 0;
   border-bottom: 1px solid grey;
 }
 .container .work-history .work-container div p {
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin: 2%;
 }
 .container footer {
   border: 1px solid white;
@@ -406,4 +533,9 @@ p {
   margin-bottom: 10%;
   width: 100%;
   height: 100px;
+  text-align: center;
+  padding: 20px;
+}
+.container footer p {
+  padding-top: 5px;
 }
