--- a/less/index.less
+++ b/less/index.less
@@ -85,6 +85,23 @@ p {
 @box-background: #E8E8E8;
 @page-background: #F8F8F8;
 
+.bounce-in {
+	animation-name: bounceIn;
+	animation-duration: 2s;
+
+	@keyframes bounceIn {
+		0% {
+			opacity: 0;
+			transform: scale(.1);
+		} 60% {
+			opacity: 1;
+			transform: scale(1.2);
+		} 100% {
+			transform: scale(1);
+		}
+	}
+}
+
 .box-properties {
 	border: 1px solid white;
 	border-radius: 8px;
@@ -184,6 +201,7 @@ p {
 		}
 
 		.left-content {
+			.bounce-in();
 			display: flex;
 			flex-direction: column;
 			width: 33%;
@@ -195,6 +213,8 @@ p {
 			border-radius: 8px;
 			padding-top: 1%;
 			padding-bottom: 1%;
+			
+
 			@media (max-width: 500px) {
 				width: 100%;
 				margin: 0;
@@ -229,6 +249,7 @@ p {
 		}
 
 		.right-content {
+			.bounce-in();
 			font-style: italic;
 			width: 33%;
 			display: flex;
@@ -236,6 +257,7 @@ p {
 			text-align: center;
 			margin: auto;
 			padding: 2%;
+			transition: all .1s ease-in-out;
 
 			@media (max-width: 500px) {
 				width: 80%;
@@ -245,6 +267,9 @@ p {
 				font-size: 1.3em;
 			}
 		}
+		.right-content:hover {
+			transform: scale(1.1);
+		}
 	}
 
 	.middle-content {
@@ -252,6 +277,7 @@ p {
 		height: auto;
 		display: flex;
 		justify-content: space-between;
+
 		@media(max-width: 500px) {
 			flex-direction: column;
 		}
@@ -263,6 +289,7 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+
 			@media(max-width: 500px) {
 				width: 100%;
 			}
@@ -282,6 +309,10 @@ p {
 					width: 30%;
 					height: 30%;
 					margin: 4%;
+					transition: all .1s ease-in-out;
+				}
+				img:hover {
+					transform: scale(1.2);
 				}
 			}
 		}
@@ -292,6 +323,7 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+
 			@media(max-width: 500px) {
 				width: 100%;
 				height: auto;
@@ -319,6 +351,7 @@ p {
 					height: 46%;
 					background-color: @page-background;
 					border-radius: 8px;
+
 					@media(max-width: 500px) {
 						.education-boxes-phone();
 					}
@@ -328,6 +361,7 @@ p {
 					height: 46%;
 					background-color: @page-background;
 					border-radius: 8px;
+
 					@media(max-width: 500px) {
 						.education-boxes-phone();
 					}
@@ -337,6 +371,7 @@ p {
 					height: 46%;
 					background-color: @page-background;
 					border-radius: 8px;
+
 					@media(max-width: 500px) {
 						.education-boxes-phone();
 					}
