--- a/less/index.less
+++ b/less/index.less
@@ -375,6 +375,13 @@ p {
 					@media(max-width: 500px) {
 						.education-boxes-phone();
 					}
+					.list-of-certs {
+						width: 100%;
+
+						ul {
+							margin-top: 3%;
+						}
+					}
 				}
 
 				div {
@@ -385,8 +392,9 @@ p {
 					h3{
 						margin: 5px;
 						width: 90%;
-						height: 40%;
-						padding: 4%;
+						height: 30%;
+						padding: 3%;
+						padding-bottom: 0px;
 						border-bottom: 1px solid grey;
 					}
 					p{
