--- a/less/index.less
+++ b/less/index.less
@@ -323,9 +323,12 @@ p {
 					height: 30%;
 					margin: 4%;
 					transition: all .2s ease-in-out;
+					padding: 2%;
 				}
 				img:hover {
 					transform: scale(1.2);
+					background: lightgrey;
+					border-radius: 10px;
 				}
 				#html5 {
 					animation-delay: 3s;
