--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .middle-content-box-properties {
   width: 49.5%;
@@ -226,6 +227,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 50%;
   height: 80%;
@@ -265,6 +267,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   height: auto;
   padding-top: 7%;
@@ -391,6 +394,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -505,6 +509,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -528,7 +533,7 @@ p {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 80%;
+  height: 85%;
   justify-content: center;
   justify-content: space-evenly;
 }
@@ -565,7 +570,7 @@ p {
 }
 .container .middle-content .education .schools #certs {
   width: 96%;
-  height: 46%;
+  height: 49%;
   background-color: #F8F8F8;
   border-radius: 8px;
 }
@@ -602,6 +607,7 @@ p {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   height: auto;
   margin-top: 10px;
@@ -620,7 +626,7 @@ p {
 }
 .container .work-history .work-container {
   width: 96%;
-  height: 90%;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -633,39 +639,68 @@ p {
     height: auto;
   }
 }
-.container .work-history .work-container div {
-  width: 32%;
+.container .work-history .work-container #work1 {
+  background-color: transparent;
+  width: 30%;
+  height: 85%;
+  perspective: 1000px;
+  border-radius: 10px;
+}
+.container .work-history .work-container #work1 .work1-inner {
+  position: relative;
+  width: 100%;
   height: 100%;
-  background-color: #F8F8F8;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1.5%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+.container .work-history .work-container #work1 .work1-inner .work1-front,
+.container .work-history .work-container #work1 .work1-inner .work1-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+  backface-visibility: hidden;
+}
+.container .work-history .work-container #work1 .work1-inner .work1-front {
+  background-color: #acacac;
+  color: black;
+  border-radius: 10px;
+}
+.container .work-history .work-container #work1 .work1-inner .work1-back {
+  background-color: #a3a3a3;
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 10px;
 }
 @media (max-width: 500px) {
-  .container .work-history .work-container div {
+  .container .work-history .work-container #work1 {
     height: 150px;
     width: 99%;
     margin: 1%;
   }
 }
-.container .work-history .work-container div h3 {
+.container .work-history .work-container #work1 h3 {
   text-align: center;
-  margin: 5px;
-  width: 90%;
-  height: 30%;
-  padding: 4%;
-  padding-top: 0;
-  border-bottom: 1px solid grey;
+  width: 100%;
+  height: 25%;
+  padding-top: 4%;
+  border-bottom: 2px solid black;
 }
-.container .work-history .work-container div p {
+.container .work-history .work-container #work1 p {
   margin: 2%;
+  margin-top: 9%;
 }
-.container footer {
+.container .work-history .work-container #work1:hover .work1-inner {
+  transform: rotateY(180deg);
+}
+footer {
   border: 2px solid white;
   border-radius: 8px;
   background-color: #E8E8E8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-top: 10px;
   margin-bottom: 10%;
   width: 100%;
@@ -673,6 +708,6 @@ p {
   text-align: center;
   padding: 20px;
 }
-.container footer p {
+footer p {
   padding-top: 5px;
 }
