--- a/less/index.less
+++ b/less/index.less
@@ -119,6 +119,7 @@ p {
 	border: 2px solid white;
 	border-radius: 8px;
 	background-color: @box-background;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .middle-content-box-properties {
@@ -371,7 +372,7 @@ p {
 				display: flex;
 				flex-wrap: wrap;
 				width: 100%;
-				height: 80%;
+				height: 85%;
 				justify-content: center;
 				justify-content: space-evenly;
 
@@ -401,7 +402,7 @@ p {
 				}
 				#certs {
 					width: 96%;
-					height: 46%;
+					height: 49%;
 					background-color: @page-background;
 					border-radius: 8px;
 
@@ -459,7 +460,7 @@ p {
 
 		.work-container {
 			width: 96%;
-			height: 90%;
+			height: 250px;
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
@@ -470,15 +471,43 @@ p {
 				height: auto;
 			}
 
-			div {
-				width: 32%;
-				height: 100%;
-				background-color: @page-background;
-				border-radius: 8px;
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				padding: 1.5%;
+			#work1 {  // card1
+				background-color: transparent;
+				width: 30%;
+				height: 85%;
+				perspective: 1000px;
+				border-radius: 10px;
+
+				.work1-inner {
+					position: relative;
+					width: 100%;
+					height: 100%;
+					text-align: center;
+					transition: transform 0.6s;
+					transform-style: preserve-3d;
+					box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+					border-radius: 10px;
+
+					.work1-front, .work1-back {
+						position: absolute;
+						width: 100%;
+						height: 100%;
+						padding: 5%;
+						backface-visibility: hidden;
+					}
+
+					.work1-front {
+						background-color: rgb(172, 172, 172);
+						color: black;
+						border-radius: 10px;
+					}
+					.work1-back {
+						background-color: rgb(163, 163, 163);
+  					color: white;
+						transform: rotateY(180deg);
+						border-radius: 10px;
+					}
+				}
 				@media (max-width: 500px) {
 					height: 150px;
 					width: 99%;
@@ -487,32 +516,35 @@ p {
 
 				h3 {
 					text-align: center;
-					margin: 5px;
-					width: 90%;
-					height: 30%;
-					padding: 4%;
-					padding-top: 0;
-					border-bottom: 1px solid grey;
+					width: 100%;
+					height: 25%;
+					padding-top: 4%;
+					border-bottom: 2px solid black;
 				}
 				p {
 					margin: 2%;
+					margin-top: 9%;
 				}
-			}
-		}
-	}
+				&:hover .work1-inner {
+					transform: rotateY(180deg);
+				}
+			} // work1
+		} // work-container
+	} // work-history
+} // container
 
-	footer {
-		.box-properties();
-		margin-top: 10px;
-		margin-bottom: 10%;
-		width: 100%;
-		height: 100px;
-		text-align: center;
-		padding: 20px;
-		
-		p {
-			padding-top: 5px;
-		}
+footer {
+	.box-properties();
+	margin-top: 10px;
+	margin-bottom: 10%;
+	width: 100%;
+	height: 100px;
+	text-align: center;
+	padding: 20px;
+	
+	p {
+		padding-top: 5px;
 	}
 }
+
 
